Target the html and body and add to it overflow hidden to prevent the trackball scrolling for users of macOS, when the controls are disabled.

--- a/lessons/07-fullscreen_and_resizing/src/style.css
+++ b/lessons/07-fullscreen_and_resizing/src/style.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  overflow: hidden;
+}
+
 .webgl {
   position: fixed;
   top: 0;
